lst
arm-none-eabi-gcc -c -mcpu=cortex-m0plus -mthumb   -DUSE_HAL_DRIVER -DSTM32L051xx -IInc -IDrivers/STM32L0xx_HAL_Driver/Inc -IDrivers/STM32L0xx_HAL_Driver/Inc/Legacy -IDrivers/CMSIS/Device/ST/STM32L0xx/Include -IDrivers/CMSIS/Include -Og -Wall -fdata-sections -ffunction-sections -g -gdwarf-2 -MMD -MP -MF"build/main.d" -Wa,-a,-ad,-alms=build/main.lst Src/main.c -o build/main.o
Src/main.c: In function 'main':
Src/main.c:126:5: warning: implicit declaration of function 'MX_ADC1_Init' [-Wimplicit-function-declaration]
     MX_ADC1_Init();
     ^
Src/main.c:127:5: warning: implicit declaration of function 'MX_ADC2_Init' [-Wimplicit-function-declaration]
     MX_ADC2_Init();
     ^
Src/main.c:177:29: warning: pointer targets in passing argument 2 of 'HAL_UART_Transmit' differ in signedness [-Wpointer-sign]
  HAL_UART_Transmit(&huart2, "W\r\n", 1, 500);
                             ^
In file included from Inc/stm32l0xx_hal_conf.h:260:0,
                 from Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal.h:48,
                 from Inc/main.h:45,
                 from Src/main.c:40:
Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_uart.h:1379:19: note: expected 'uint8_t *' but argument is of type 'char *'
 HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, uint8_t *pData, uint16_t Size, uint32_t Timeout);
                   ^
Src/main.c:179:29: warning: pointer targets in passing argument 2 of 'HAL_UART_Transmit' differ in signedness [-Wpointer-sign]
  HAL_UART_Transmit(&huart2, gps_message, strlen((const char *)gps_message), 500);
                             ^
In file included from Inc/stm32l0xx_hal_conf.h:260:0,
                 from Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal.h:48,
                 from Inc/main.h:45,
                 from Src/main.c:40:
Drivers/STM32L0xx_HAL_Driver/Inc/stm32l0xx_hal_uart.h:1379:19: note: expected 'uint8_t *' but argument is of type 'char *'
 HAL_StatusTypeDef HAL_UART_Transmit(UART_HandleTypeDef *huart, uint8_t *pData, uint16_t Size, uint32_t Timeout);
                   ^
Src/main.c:223:14: warning: unused variable 'accu_percentage' [-Wunused-variable]
       double accu_percentage = voltmeter_get_percentage();
              ^
Src/main.c:200:9: warning: unused variable 'depth' [-Wunused-variable]
  double depth = 7.0;
         ^
Src/main.c:196:11: warning: unused variable 'surface_pressure' [-Wunused-variable]
  uint32_t surface_pressure = 101325;
           ^
Src/main.c:96:11: warning: unused variable 'rtc_time_counter' [-Wunused-variable]
  uint32_t rtc_time_counter;
           ^
Src/main.c:95:11: warning: unused variable 'seconds_in_day' [-Wunused-variable]
  uint32_t seconds_in_day = seconds_in_hour * 24;
           ^
Src/main.c: In function 'SystemClock_Config':
Src/main.c:358:20: error: 'RCC_OscInitTypeDef' has no member named 'HSEPredivValue'
   RCC_OscInitStruct.HSEPredivValue = RCC_HSE_PREDIV_DIV2;
                    ^
Src/main.c:358:38: error: 'RCC_HSE_PREDIV_DIV2' undeclared (first use in this function)
   RCC_OscInitStruct.HSEPredivValue = RCC_HSE_PREDIV_DIV2;
                                      ^
Src/main.c:358:38: note: each undeclared identifier is reported only once for each function it appears in
Src/main.c:363:34: error: 'RCC_PLL_MUL2' undeclared (first use in this function)
   RCC_OscInitStruct.PLL.PLLMUL = RCC_PLL_MUL2;
                                  ^
Src/main.c:383:58: error: 'RCC_PERIPHCLK_ADC' undeclared (first use in this function)
   PeriphClkInit.PeriphClockSelection = RCC_PERIPHCLK_RTC|RCC_PERIPHCLK_ADC;
                                                          ^
Src/main.c:388:16: error: 'RCC_PeriphCLKInitTypeDef' has no member named 'AdcClockSelection'
   PeriphClkInit.AdcClockSelection = RCC_ADCPCLK2_DIV2;
                ^
Src/main.c:388:37: error: 'RCC_ADCPCLK2_DIV2' undeclared (first use in this function)
   PeriphClkInit.AdcClockSelection = RCC_ADCPCLK2_DIV2;
                                     ^
In file included from Src/main.c:54:0:
Src/main.c: At top level:
Inc/pressure_sensor_object.h:19:17: warning: 'pressure' defined but not used [-Wunused-variable]
 static uint32_t pressure;
                 ^
Inc/pressure_sensor_object.h:20:17: warning: 'temperature' defined but not used [-Wunused-variable]
 static uint32_t temperature;
                 ^
Inc/pressure_sensor_object.h:21:15: warning: 'dT' defined but not used [-Wunused-variable]
 static double dT;
               ^
Inc/pressure_sensor_object.h:22:15: warning: 'actual_temperature' defined but not used [-Wunused-variable]
 static double actual_temperature;
               ^
Inc/pressure_sensor_object.h:23:15: warning: 'OFF' defined but not used [-Wunused-variable]
 static double OFF;
               ^
Inc/pressure_sensor_object.h:24:15: warning: 'SENS' defined but not used [-Wunused-variable]
 static double SENS;
               ^
Inc/pressure_sensor_object.h:25:15: warning: 'P' defined but not used [-Wunused-variable]
 static double P;
               ^
Inc/pressure_sensor_object.h:28:17: warning: 'sensor_prom' defined but not used [-Wunused-variable]
 static uint16_t sensor_prom[7];
                 ^
In file included from Src/main.c:55:0:
Inc/voltmeter_object.h:9:15: warning: 'voltage_coefficient' defined but not used [-Wunused-variable]
 static double voltage_coefficient = 3.3/4096.0;
               ^
Inc/voltmeter_object.h:10:15: warning: 'accu_voltage' defined but not used [-Wunused-variable]
 static double accu_voltage;
               ^
Inc/voltmeter_object.h:11:15: warning: 'accu_percentage' defined but not used [-Wunused-variable]
 static double accu_percentage;
               ^
In file included from Inc/dive_meter_interface.h:4:0,
                 from Src/main.c:61:
Inc/dive_meter_object.h:6:16: warning: 'current_depth' defined but not used [-Wunused-variable]
 static uint8_t current_depth;
                ^
Inc/dive_meter_object.h:7:16: warning: 'max_depth' defined but not used [-Wunused-variable]
 static uint8_t max_depth;
                ^
Inc/dive_meter_object.h:8:16: warning: 'current_dive_time' defined but not used [-Wunused-variable]
 static uint8_t current_dive_time;
                ^
Inc/dive_meter_object.h:9:16: warning: 'old_minutes' defined but not used [-Wunused-variable]
 static uint8_t old_minutes;
                ^
Inc/dive_meter_object.h:11:16: warning: 'dive_started_flag' defined but not used [-Wunused-variable]
 static uint8_t dive_started_flag = 0;
                ^
Makefile:184: ошибка выполнения рецепта для цели «build/main.o»
make: *** [build/main.o] Ошибка 1
